# anime-dbm

./: CMakeLists.txt
lib/: file.c  file.h  get.c  get.h  maths.h  str.c  str.h
src/: CMakeLists.txt  anime-db-dialog.c  anime-db-dialog.h  anime-db-engine.c  anime-db.c  anime-dbm-conf.h  anime-dbm-db.c  anime-dbm-db.h  anime-dbm-dialog.c  anime-dbm-dialog.h  anime-dbm-dialogs.h  anime-dbm-engine.c  anime-dbm-engine.h  anime-dbm-rec.c  anime-dbm-rec.h  anime-dbm-sort.c  anime-dbm-sort.h  anime-dbm.c  file.c  file.h  get.c  maths.h  str.c  str.h
